feat: Implement PWA support and offline caching
Adds service worker, manifest, and meta tags to enable Progressive Web App functionality. This includes offline caching of core assets and prompts for installation. Also includes a new download icon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRM ADAPTU</title>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#020617" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="ADAPTU CRM" />
+    <link rel="apple-touch-icon" href="/icon.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -38,6 +44,11 @@
       }
       .dark ::-webkit-scrollbar-thumb {
         background: #475569;
+      }
+
+      /* PWA Adjustments for standalone mode */
+      @media (display-mode: standalone) {
+        .pb-20 { padding-bottom: 2rem; }
       }
     </style>
   <script type="importmap">
